# diagrama

./: Cargo.toml  README.md
crates/app-test-plantuml/: Cargo.toml
crates/app-test-plantuml/src/: main.rs
crates/app-tui/: Cargo.toml
crates/app-tui/src/: adapters.rs  ascii_renderer.rs  main.rs
crates/app-tui/src/adapters/: tui_presenter.rs
crates/lib-core/: Cargo.toml
crates/lib-core/src/: gateways.rs  lib.rs  use_cases.rs
crates/lib-core/src/domain/: adapters.rs  entities.rs  use_cases.rs
crates/lib-core/src/domain/adapters/: diagram_parser_adapter.rs  graph_parser.rs
crates/lib-core/src/domain/entities/: diagram.rs  edge.rs  graph.rs  group.rs  node.rs  style.rs  value.rs
crates/lib-core/src/entities/: edge.rs  graph.rs  group.rs  node.rs  style.rs
crates/lib-core/src/gateways/: graph_gateway.rs
crates/lib-core/src/use_cases/: load_graph.rs
crates/lib-plantuml/: Cargo.toml
crates/lib-plantuml/src/: adapters.rs  infra.rs  infrastructure.rs  lib.rs
crates/lib-plantuml/src/adapters/: ast_to_diagram_mapper.rs  diagram_parser_adapter_plantuml_impl.rs  graph_parser_plantuml_impl.rs  plant_uml_graph_gateway.rs
crates/lib-plantuml/src/infra/: ast.rs  parser.rs  pest.rs  plantuml.pest  transformer.rs
crates/lib-plantuml/src/infra/ast/: plant_uml_ast.rs
crates/lib-plantuml/src/infra/models/: ast_node.rs
crates/lib-plantuml/src/infra/pest/: plantuml.pest  plantuml_pest_parser.rs
crates/lib-plantuml/src/infrastructure/: parser.rs  transformer.rs
crates/lib-plantuml/src/infrastructure/adapters/: plant_uml_graph_gateway.rs
(+1 files in other folders)
